--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>discord app</title>
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+JP" rel="stylesheet" />
+    <title>Discord App</title>
   </head>
   <body>
     <div id="root"></div>
